--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .container {
     height: 100%;
     overflow: auto;
-    background: linear-gradient(#e66465, #9198e5);
+    background: linear-gradient(90deg, rgba(63,94,251,1) 0%, rgba(155,70,252,1) 100%);
 }
