--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,4 +2,10 @@
     height: 100%;
     overflow: auto;
     background: linear-gradient(90deg, rgba(63,94,251,1) 0%, rgba(155,70,252,1) 100%);
+    display: flex;
+    justify-content: center;
+}
+
+.content {
+    width: 70%;
 }
