--- a/src/app/components/repos-list/repos-list.component.html
+++ b/src/app/components/repos-list/repos-list.component.html
@@ -1,1 +1,21 @@
-<p>repos-list works!</p>
+<div class="container">
+    <div class="input-container">
+        <mat-form-field>
+            <input matInput placeholder="Type GitHub Nick" [(ngModel)]="searchName">
+        </mat-form-field>
+        <button class="search-button" mat-raised-button (click)="handleSearchButton()">Search</button>
+    </div>
+
+    <div class="list-container">
+        <div class="filter-container">
+            <div class="filter-button">
+                <h4 class="filter-title">Sort By Popularity</h4>
+                <img height="30px" src=""/>
+            </div>
+        </div>
+
+       <div class="test">
+dsds
+       </div>
+    </div>
+</div>
