Added  Sass to the project

--- a/src/app/components/repos-list/repos-list.component.html
+++ b/src/app/components/repos-list/repos-list.component.html
@@ -3,14 +3,14 @@
         <mat-form-field>
             <input matInput placeholder="Type GitHub Nick" [(ngModel)]="searchName">
         </mat-form-field>
-        <button class="search-button" mat-raised-button (click)="handleSearchButton()">Search</button>
+        <button mat-raised-button (click)="handleSearchButton()">Search</button>
     </div>
 
     <div class="list-container">
         <div class="filter-container">
             <div class="filter-button">
-                <h4 class="filter-title">Sort By Popularity</h4>
-                <img height="30px" src=""/>
+                <h4>Sort By Popularity</h4>
+                <img src=""/>
             </div>
         </div>
 
