--- a/src/app/components/start-page/start-page.component.html
+++ b/src/app/components/start-page/start-page.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-    <h1 class="title">GitHub Repos</h1>
+    <h1>GitHub Repos</h1>
     <div class="search-container">
         <mat-form-field>
             <input matInput placeholder="Type GitHub Nick" [(ngModel)]="searchName">
         </mat-form-field>
         <mat-error class="search-error" *ngIf="errorMessage">
             {{errorMessage}}
-         </mat-error>
-        <button class="search-button" mat-raised-button (click)="handleSearchButton()">Search</button>
+        </mat-error>
+        <button mat-raised-button (click)="handleSearchButton()">Search</button>
     </div>
 </div>
