--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,9 @@
+@import "../styles/styles.scss";
+
 .container {
     height: 100%;
     overflow: auto;
-    background: linear-gradient(90deg, rgba(63,94,251,1) 0%, rgba(155,70,252,1) 100%);
+    background: $background-theme;
     display: flex;
     justify-content: center;
 }
