--- a/src/app/components/repos-list/repos-list.component.html
+++ b/src/app/components/repos-list/repos-list.component.html
@@ -1,21 +1,44 @@
 <div class="container">
     <div class="input-container">
-        <mat-form-field>
-            <input matInput placeholder="Type GitHub Nick" [(ngModel)]="searchName">
-        </mat-form-field>
-        <button mat-raised-button (click)="handleSearchButton()">Search</button>
+        <div class="title-container">
+            <h2>GitHub NickName:</h2>
+            <h2>Brimstonee12</h2>
+        </div>
+
+        <div>
+            <mat-form-field>
+                <input matInput placeholder="Type GitHub Nick" [(ngModel)]="searchName">
+            </mat-form-field>
+            <button class="search-button" mat-raised-button (click)="handleSearchButton()">Search</button>
+        </div>
+
     </div>
 
     <div class="list-container">
-        <div class="filter-container">
+        <div>
             <div class="filter-button">
                 <h4>Sort By Popularity</h4>
-                <img src=""/>
+                <img src="" />
             </div>
         </div>
-
-       <div class="test">
-dsds
-       </div>
+        <div *ngIf="gitReposList">
+            <table  mat-table [dataSource]="gitReposList">
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef> Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="language">
+                    <th mat-header-cell *matHeaderCellDef> Language </th>
+                    <td mat-cell *matCellDef="let element"> {{element.language}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="created_at">
+                    <th mat-header-cell *matHeaderCellDef> Create Date </th>
+                    <td mat-cell *matCellDef="let element"> {{element.created_at}} </td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
+        </div>
+        
     </div>
 </div>
