--- a/src/app/components/repos-list/repos-list.component.scss
+++ b/src/app/components/repos-list/repos-list.component.scss
@@ -51,3 +51,10 @@
 .repos-table {
     width: 100%;
 }
+.mat-form-field {
+    padding: 0 !important;
+}
+.search-error {
+    font-size: 12px;
+    margin: 0;
+}
