Added filter options to table

--- a/src/app/components/repos-list/repos-list.component.scss
+++ b/src/app/components/repos-list/repos-list.component.scss
@@ -39,7 +39,7 @@
     padding: 15px;
     div {
         display: flex;
-        justify-content: space-around;
+        justify-content: flex-end;
     }
 }
 
