--- a/src/app/components/repos-list/repos-list.component.html
+++ b/src/app/components/repos-list/repos-list.component.html
@@ -8,7 +8,7 @@
             <mat-form-field>
                 <input matInput placeholder="Type GitHub Nick" [(ngModel)]="searchName">
             </mat-form-field>
-            
+
             <button class="search-button" mat-raised-button (click)="handleSearchButton()">Search</button>
             <mat-error class="search-error" *ngIf="errorMessage">
                 {{errorMessage}}
@@ -18,12 +18,16 @@
 
     <div class="list-container">
         <div>
-            <mat-slide-toggle>Sort By Name</mat-slide-toggle>
-            <mat-slide-toggle>Sort By Language</mat-slide-toggle>
-            <mat-slide-toggle>Slide me!</mat-slide-toggle>
+            <mat-form-field>
+                <mat-label>Sort By</mat-label>
+                <mat-select (selectionChange)="filterReposList($event.value)">
+                    <mat-option *ngFor="let filter of availableFilters" [value]="filter">
+                        {{filter}}</mat-option>
+                </mat-select>
+            </mat-form-field>
         </div>
         <div class="table-container">
-            <table class="repos-table" mat-table [dataSource]="gitReposList">
+            <table #table class="repos-table" mat-table [dataSource]="gitReposList">
                 <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef>Name</th>
                     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -34,12 +38,12 @@
                 </ng-container>
                 <ng-container matColumnDef="created_at">
                     <th mat-header-cell *matHeaderCellDef>Create Date</th>
-                    <td mat-cell *matCellDef="let element">{{element.created_at}} </td>
+                    <td mat-cell *matCellDef="let element">{{element.created_at | date: 'dd/MM/yyyy'}} </td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
         </div>
-           
+
     </div>
 </div>
