--- a/src/app/components/repos-list/repos-list.component.html
+++ b/src/app/components/repos-list/repos-list.component.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="list-container">
-        <div>
+        <div class="filter-container">
             <mat-form-field>
                 <mat-label>Sort By</mat-label>
                 <mat-select (selectionChange)="filterReposList($event.value)">
@@ -27,7 +27,7 @@
             </mat-form-field>
         </div>
         <div class="table-container">
-            <table #table class="repos-table" mat-table [dataSource]="gitReposList">
+            <table #table *ngIf="!handleReposService.isListLoading else loading" class="repos-table" mat-table [dataSource]="gitReposList">
                 <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef>Name</th>
                     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -43,7 +43,9 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
+            <ng-template #loading>
+                <div class="loading-spinner"></div>
+            </ng-template>
         </div>
-
     </div>
 </div>
