--- a/src/app/components/start-page/start-page.component.scss
+++ b/src/app/components/start-page/start-page.component.scss
@@ -15,8 +15,18 @@
     padding: 15px;
     background: $theme-color;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     border-radius: 15px;
+}
+
+.search-error {
+    font-size: 12px;
+}
+
+.search-content {
+    display: flex;
+    flex-direction: column;
     button{
         margin-top: 20px;
         background: $button-theme;
@@ -24,6 +34,16 @@
     }
 }
 
-.search-error {
-    font-size: 12px;
+.loading-spinner {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #95999d;
+    width: 100px;
+    height: 100px;
+    animation: spin 2s linear infinite;
 }
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
