--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,4 +10,10 @@
 
 .content {
     width: 60%;
+    @media (max-width: 1100px){
+        width: 80%;
+    }
+    @media (max-width: 800px){
+        width: 95%;
+    }
 }
