--- a/src/app/components/repos-list/repos-list.component.scss
+++ b/src/app/components/repos-list/repos-list.component.scss
@@ -4,26 +4,36 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .input-container {
     margin-bottom: 40px;
-    margin-top: 30%;
     border-radius: 15px;
     background: $theme-color;
     padding: 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    @media (max-width: 650px){
+        padding: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
 }
 
 .title-container {
     display: flex;
     h2 {
         color: $content-font-color;
-        font-size: 20px;
+        font-size: 1.5rem;
         margin: 0 6px 0 0;
+        @media (max-width: 650px){
+            font-size: 1.1rem;
+            margin-bottom: 5px;
+        }
     }
 }
 
@@ -37,6 +47,9 @@
     border-radius: 15px;
     background: $theme-color;
     padding: 15px;
+    @media (max-width: 650px){
+        padding: 5px;
+    }
 }
 
 .filter-container {
@@ -57,12 +70,8 @@
     width: 100%;
 }
 
-.mat-form-field {
-    padding: 0 !important;
-}
-
 .search-error {
-    font-size: 12px;
+    font-size: 0.8rem;
     margin: 0;
 }
 
