--- a/src/app/components/repos-list/repos-list.component.scss
+++ b/src/app/components/repos-list/repos-list.component.scss
@@ -41,12 +41,16 @@
     margin-left: 15px;
     background: $button-theme;
     color: $theme-color;
+    @media (max-width: 350px){
+        margin-left: 5px;
+    }
 }
 
 .list-container {
     border-radius: 15px;
     background: $theme-color;
     padding: 15px;
+    overflow: hidden;
     @media (max-width: 650px){
         padding: 5px;
     }
@@ -64,6 +68,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    @media (max-height: 600px){
+        max-height: 250px;
+    }
 }
 
 .repos-table {
