--- a/src/app/components/start-page/start-page.component.html
+++ b/src/app/components/start-page/start-page.component.html
@@ -5,12 +5,11 @@
             <mat-form-field>
                 <input matInput placeholder="Type GitHub Nick" [(ngModel)]="searchName">
             </mat-form-field>
-            <mat-error class="search-error" *ngIf="errorMessage">
+            <mat-error *ngIf="errorMessage">
                 {{errorMessage}}
             </mat-error>
             <button mat-raised-button (click)="handleSearchButton()">Search</button>
         </div>
-
         <ng-template #loading>
             <div class="loading-spinner"></div>
         </ng-template>
