--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -42,3 +42,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }   
 }
 
+.mat-error {
+    font-size: 0.8rem;
+    margin: 0;
+}
